# ide-embedded

./: .gitignore  CMakeLists.txt  EVENT_LOGIC_ARCHITECTURE.md  LICENSE  README.md  compilar.bat  custom_components.json  fix_toolchain.py  fix_toolchain_connect.py  fix_toolchain_errors.py  fix_toolchain_lambdas.py  fix_toolchain_parents.py  refactor.py  refactor_toolchain.py  rodar.bat  temp_old_blockeditor.cpp  temp_old_blockeditor2.cpp  teste.ideproject
.github/workflows/: build.yml  cppcheck.yml  windows-build.yml
apps/ide/: CMakeLists.txt  main.cpp  resources.qrc  resources.rc
apps/ide/include/: AiOptimizer.h  MainWindow.h  OscilloscopePanel.h  ProjectManager.h  ToolchainManager.h  TutorialOverlay.h  WebElementItem.h  WebPageEditorDialog.h
apps/ide/src/: AiOptimizer.cpp  MainWindow.cpp  OscilloscopePanel.cpp  ProjectManager.cpp  ToolchainManager.cpp  TutorialOverlay.cpp  WebElementItem.cpp  WebPageEditorDialog.cpp
build_msvc/: CMakeCache.txt
cppcheck_cfg/winlibs64ucrt_stage/inst_cppcheck-2.14.0/share/Cppcheck/cfg/: windows.cfg
examples/: teste.ideproject
scratch/: check_pdf.py  setup_r_drive.ps1
